# NoteManager

./: .env.example  .gitignore  README.md  pyproject.toml
app/: database.py  main.py
app/core/: init_app.py  logger.py  roles_permissions.py  settings.py
app/dependencies/: auth.py  jwt_data.py
app/models/: notes.py  permissions.py  users.py
app/repository/: notes.py  users.py
app/routes/: auth.py  notes.py
app/services/: auth.py  notes.py
app/utils/: auth.py  logger.py
docker/: .dockerignore  docker-compose.yml  dockerfile
